--- a/index.html
+++ b/index.html
@@ -57,11 +57,10 @@
                .call(d3.axisLeft(y))
                .append("text")
                .attr("class", "label")
-               .attr("transform", "rotate(-90)")
-               .attr("transform", "translate(" + sub_height / 2 + ", " + -margin.left / 2 + ")")
+               .attr("transform", "rotate(-90) translate(" + sub_height / 2 + ", " + -margin.left / 2 + ")")
            //    .attr("y", -margin.left)
            //    .attr("x", -(sub_height / 2))
-               .attr("dy", "1em")
+            //   .attr("dy", "1em")
                .attr("text-anchor", "middle")
                .text("My Y label");
 
