--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <title>GovHack 2018 - Big Orange Brain Entry</title>
    <script src="https://d3js.org/d3.v5.min.js"></script>
    <script>
-      function govhack(div_id) {
+      function govhack(div_id, data_file, title_label, x_axis_label, y_axis_label) {
          var width = 600, height = 470;
          var margin = { top: 70, right: 20, bottom: 50, left: 50 };
          var sub_width = width - margin.left - margin.right;
@@ -21,7 +21,7 @@
                  .attr("id", "chart_01_title")
                  .attr("class", "annotation")
                  .attr("text-anchor", "middle")
-                 .text("My Plot Title");
+            .text(title_label);
 
          chart.append("g")
                  .attr("transform", "translate(" + width / 8 + ", " + margin.top / 3 * 2  + ")")
@@ -31,7 +31,7 @@
                  .attr("text-anchor", "left")
                  .text("Data value: Waiting for mouse over event");
 
-         d3.csv("brain.csv").then(function(data) {
+         d3.csv(data_file).then(function(data) {
             var x = d3.scaleBand()
                .rangeRound([0, sub_width])
                .padding(0.1);
@@ -51,18 +51,15 @@
                .attr("class", "label")
                .attr("transform", "translate(" + sub_width / 2 + ", " + margin.bottom / 3 * 2 + ")")
                .style("text-anchor", "middle")
-               .text("My X label");
+               .text(x_axis_label);
 
             g.append("g")
                .call(d3.axisLeft(y))
                .append("text")
                .attr("class", "label")
-               .attr("transform", "rotate(-90) translate(" + sub_height / 2 + ", " + -margin.left / 2 + ")")
-           //    .attr("y", -margin.left)
-           //    .attr("x", -(sub_height / 2))
-            //   .attr("dy", "1em")
+               .attr("transform", "translate(" + -margin.left / 2 + ", " + sub_height / 2 + ") rotate(-90)")
                .attr("text-anchor", "middle")
-               .text("My Y label");
+               .text(y_axis_label);
 
             g.selectAll(".bar")
                .data(data)
@@ -117,7 +114,7 @@
       }
    </style>
 </head>
-<body onload="govhack('#chart_01');">
+<body onload="govhack('#chart_01', 'brain.csv', 'My Plot Title', 'My X axis', 'My Y axis'); govhack('#chart_02', 'brain.csv', 'My Plot Title', 'My X axis', 'My Y axis');">
    <h1>Big Orange Brain</h1>
    <h2>Chart 01 - Sample</h2>
    <div id="chart_01"></div>
