--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
          chart.append("g")
                  .attr("transform", "translate(" + width / 2 + ", " + margin.top / 3 * 1 + ")")
                  .append("text")
-                 .attr("id", "chart_01_title")
+            .attr("id", div_id + "_title")
                  .attr("class", "annotation")
                  .attr("text-anchor", "middle")
             .text(title_label);
@@ -26,7 +26,7 @@
          chart.append("g")
                  .attr("transform", "translate(" + width / 8 + ", " + margin.top / 3 * 2  + ")")
                  .append("text")
-                 .attr("id", "chart_01_comment")
+            .attr("id", div_id + "_comment")
                  .attr("class", "annotation")
                  .attr("text-anchor", "left")
                  .text("Data value: Waiting for mouse over event");
@@ -66,7 +66,7 @@
                .enter()
                .append("rect")
                .on("mouseover", function(d) {
-                  d3.select("#chart_01_comment").text("Data value: " + Number(d.Speed));
+                  d3.select(div_id + "_comment").text("Data value: " + Number(d.Speed));
                })
                .attr("class", "bar")
                .attr("x", function(d) { return x(d.Run); })
