--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
          border: 1px solid white;
       }
 
+      #chart_02 svg {
+         border: 1px solid white;
+      }
+
       .annotation {
          fill: white;
          font: bold 12px sans-serif;
