--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
          var sub_width = width - margin.left - margin.right;
          var sub_height = height - margin.top - margin.bottom;
 
-         var chart = d3.select(div_id)
+         var chart = d3.select("#" + div_id)
                           .append("svg")
                           .attr("width", width)
                           .attr("height", height);
@@ -118,7 +118,7 @@
       }
    </style>
 </head>
-<body onload="govhack('#chart_01', 'brain.csv', 'My Plot1 Title', 'My X1 axis', 'My Y1 axis'); govhack('#chart_02', 'brain.csv', 'My Plot2 Title', 'My X2 axis', 'My Y2 axis');">
+<body onload="govhack('chart_01', 'brain.csv', 'My Plot1 Title', 'My X1 axis', 'My Y1 axis'); govhack('chart_02', 'brain.csv', 'My Plot2 Title', 'My X2 axis', 'My Y2 axis');">
    <h1>Big Orange Brain</h1>
    <h2>Chart 01 - Sample</h2>
    <div id="chart_01"></div>
