--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       }
    </style>
 </head>
-<body onload="govhack('chart_01', 'brain.csv', 'My Plot1 Title', 'My X1 axis', 'My Y1 axis'); govhack('chart_02', 'brain.csv', 'My Plot2 Title', 'My X2 axis', 'My Y2 axis');">
+<body onload="govhack('chart_01', 'brain.csv', 'My Plot1 Title', 'My X1 axis', 'My Y1 axis'); govhack('chart_02', 'cookie.csv', 'My Plot2 Title', 'My X2 axis', 'My Y2 axis');">
    <h1>Big Orange Brain</h1>
    <h2>Chart 01 - Sample</h2>
    <div id="chart_01"></div>
