--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
       }
 
       #chart_01 svg {
-         border: 1px solid white;
+         border: none;
       }
 
       #chart_02 svg {
-         border: 1px solid white;
+         border: none;
       }
 
       .annotation {
