--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
          color: orangered;
       }
 
+      #chart_01, #chart_02 {
+         float: left;
+      }
+
       #chart_01 svg {
          border: none;
       }
