--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
          color: orangered;
       }
 
-      #chart_01, #chart_02 {
+      #chart_01_plot, #chart_02_plot {
          float: left;
       }
 
