--- a/index.html
+++ b/index.html
@@ -121,7 +121,18 @@
 </head>
 <body onload="bar_plot('chart_01_plot', 'brain.csv', 'My Brain', 'Brain Size', 'Brain Speed'); bar_plot('chart_02_plot', 'cookie.csv', 'My Cookie', 'Cookie Taste', 'Cookie Crumble');">
    <h1>Big Orange Brain</h1>
-   <form><input id="query" type="text" size="100" /><input id="action" type="button" onclick="govhack();" /></form>
+   <form>
+      <table>
+         <tr>
+            <td>
+               <input id="query" type="text" size="100" />
+            </td>
+            <td>
+               <input id="action" type="button" value="Discover Markets" onclick="govhack();" />
+            </td>
+         </tr>
+      </table>
+   </form>
    <table id="chart_01">
       <tr>
          <td>
