--- a/index.html
+++ b/index.html
@@ -144,10 +144,17 @@
    </style>
 </head>
 <body onload="bar_plot('chart_01_plot', 'brain.csv', 'My Brain', 'Brain Size', 'Brain Speed'); bar_plot('chart_02_plot', 'cookie.csv', 'My Cookie', 'Cookie Taste', 'Cookie Crumble');">
-   <h1>Big Orange Brain</h1>
+   <h1>Project: Big Orange Brain</h1>
    <form>
       <center>
          <table>
+            <tr>
+               <td>
+                  Enter your top skills:
+               </td>
+               <td></td>
+               <td></td>
+            </tr>
             <tr>
                <td>
                   <input id="query" type="text" size="100" />
