--- a/index.html
+++ b/index.html
@@ -112,17 +112,17 @@
 
       .trend_up {
          fill: forestgreen;
-         font: bold 14px sans-serif;
+         font: bold 20x sans-serif;
       }
 
       .trend_down {
          color: darkred;
-         font: bold 10px sans-serif;
+         font: bold 16px sans-serif;
       }
 
       .trend_stable {
          color: grey;
-         font: normal 12px sans-serif;
+         font: normal 18px sans-serif;
       }
 
       .annotation {
