--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
          var q = d3.select("#query").text().split(", ");
 
+         alert(q)
+
          highlight.append("span")
             .text(q[0])
             .attr("class", "trend_up");
